--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 *,
@@ -24,34 +25,18 @@ ul {
     list-style: none;
 }
 
-.slider-wrap {
-    position: relative;
-    margin: 50px auto;
-    width: 478px;
-    height: 215px;
-    overflow: hidden;
-}
-
-.slider {
-    position: relative;
-    width: 478px;
-    height: 215px;
-}
-
-.slider__item {
-    width: 478px;
-    height: 215px;
-    position: relative;
-    float: left;
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
-    display: block;
 }
 
-.slider__slide {
-    width: 478px;
-    height: 215px;
+a {
+    display: inline-block;
+    text-decoration: none;
 }
+
+
+/* btn */
 
 .btn__prev,
 .btn__next {
@@ -138,4 +123,201 @@ ul {
 .btn__next:active:before {
     background-color: #b3ffff;
 }
+
+.btn__cart {
+    float: right;
+    padding: 6px;
+    font-size: 12px;
+    line-height: 16px;
+    color: #ffffff;
+    background-color: #3a3a3a;
+    transition: .2s;
+}
+
+.btn__cart:hover {
+    background-color: #eb5c3e;
+}
+
+/* slider */
+
+.slider-wrap {
+    position: relative;
+    margin: 50px auto;
+    width: 478px;
+    height: 215px;
+    border: 1px solid lightgrey;
+    border-radius: 4px;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+
+.slider {
+    position: relative;
+    width: 478px;
+    height: 215px;
+}
+
+.slider__item {
+    width: 478px;
+    height: 215px;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
+.slider__slide {
+    width: 478px;
+    height: 215px;
+}
+
+.pagination {
+    text-align: center;
+    font-size: 30px;
+}
+
+/* products */
+
+.product__wrap {
+    width: 480px;
+    margin: 50px auto;
+}
+
+.product__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.product__item {
+    margin-bottom: 40px;
+    width: 33.333333%;
+    padding: 10px 8px;
+    border: 3px solid transparent;
+}
+
+.product__item:hover {
+    border: 3px solid #eb5c3e;
+}
+
+.product__img {
+    width: 135px;
+    height: 135px;
+}
+
+.product__title {
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 16px;
+    color: black;
+    padding-bottom: 30px;
+}
+
+.product__price {
+    display: inline-block;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.product__price-doll {
+    font-size: 18px;
+}
+
+.product__rating {
+    margin-top: 15px;
+    position: relative;
+}
+
+.product__rating:before {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background-color: #f0f0f0;
+}
+
+.product__star-wrap {
+    position: absolute;
+    top: 6px;
+    right: 50%;
+    transform: translateX(50%);
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #fff;
+}
+
+.product__text-wrap {
+    display: none;
+}
+
+.product__item:hover .product__text-wrap {
+    display: block;
+}
+
+.product__text {
+    font-size: 11px;
+    line-height: 14px;
+    color: #636363;
+}
+
+.product__star-one {
+    width: 12px;
+    height: 11px;
+    background: url("img/star-black.png") repeat left;
+}
+
+.product__star-two {
+    width: 24px;
+    height: 11px;
+    background: url("img/star-black.png") repeat left;
+}
+
+.product__star-three {
+    width: 36px;
+    height: 11px;
+    background: url("img/star-black.png") repeat left;
+}
+
+.product__star-four {
+    width: 48px;
+    height: 11px;
+    background: url("img/star-black.png") repeat left;
+}
+
+.product__star-five {
+    width: 60px;
+    height: 11px;
+    background: url("img/star-black.png") repeat left;
+}
+
+.product__item:hover .product__star-one {
+    width: 12px;
+    height: 11px;
+    background: url("img/star-orange.png") repeat left;
+}
+
+.product__item:hover .product__star-two {
+    width: 24px;
+    height: 11px;
+    background: url("img/star-orange.png") repeat left;
+}
+
+.product__item:hover .product__star-three {
+    width: 36px;
+    height: 11px;
+    background: url("img/star-orange.png") repeat left;
+}
+
+.product__item:hover .product__star-four {
+    width: 48px;
+    height: 11px;
+    background: url("img/star-orange.png") repeat left;
+}
+
+.product__item:hover .product__star-five {
+    width: 60px;
+    height: 11px;
+    background: url("img/star-orange.png") repeat left;
+}
+
 
