--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 img {
      width: 100%;
      height: auto;
+    object-fit: cover;
 }
 
 ul {
@@ -191,7 +192,7 @@ a {
 
 .product__item {
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 29px;
     width: 33.333333%;
     padding: 10px 8px;
     border: 3px solid transparent;
@@ -249,6 +250,10 @@ a {
 
 .product__text-wrap {
     display: none;
+    border: 3px solid #eb5c3e;
+    width: calc(100% + 6px);
+    left: -3px;
+    border-top: none;
 }
 
 .product__item:hover .product__text-wrap {
@@ -262,6 +267,7 @@ a {
     font-size: 11px;
     line-height: 14px;
     color: #636363;
+    padding: 10px 8px;
 }
 
 .product__star-one {
